# POC-data-source-from-social-medium

./: pyproject.toml
.github/: CODEOWNERS
poc/: facebook_get_video.py  instagram_get_video.py
poc/ai_service/: openai_client.py
poc/arrangement_by_ai/: README.md  arrange_travel_by_info_collection.md  arrange_travel_from_ai.md
poc/datasource/with_firecrawl/: line_travel_raw_overview_line_travel_scraper_1747635482.json  line_travel_raw_overview_line_travel_scraper_1747635482.md  line_travel_scraper.py
poc/parse_video_content/: README.md  __init__.py  batch_process.py  parse_video.py  video_parser.py
poc/parse_video_content_by_subtitles/: audio_to_text.py
