[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "social-media-data-source"
version = "0.0.0"
description = "A library for retrieving posts from social media platforms by hashtags or keywords"
authors = [
    { name = "Bryant", email = "bryant@example.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["social media", "instagram", "facebook", "threads", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0"
]

[tool.poetry]
packages = [
    { include = "social_media_data_source", from = "src" },
]

[project.urls]
Homepage = "https://github.com/Chisanan232/POC-data-source-from-social-medium"
Repository = "https://github.com/Chisanan232/POC-data-source-from-social-medium"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Dependency for test
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
#pytest-html = "^4.1.1"    # Generate a report as HTML about test
#pytest-rerunfailures = "^14.0"    # Rerun feature in test for PyTest
coverage = "^6.2"    # Test coverage feature with service *CodeCov*
#coveralls = "^3.3.1"    # Test coverage feature with service *Coverall*

[tool.poetry.group.pre-commit-ci]
optional = true

[tool.poetry.group.pre-commit-ci.dependencies]
# Dependency for CI
pre-commit = "^3.5.0"
pylint = "^3.1.0"
mypy = "^1.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.5.49"
mkdocs-autorefs = "^1.0.1"
mkdocstrings = ">=0.24.1,<0.27.0"
mkdocstrings-python = "^1.9.0"
mike = "^2.1.3"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-git-committers-plugin-2 = {version = "^2.4.1", python = ">=3.8,<4"}
